--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
                 <p style="font-size: 15px; margin: 3%;"><b>Fill The Form, Claim Your E-Certificate, And Wear Your Cyber-Badge Of Honor.</b></p>
 		    <hr>
                 <label for="naem"><b>Name</b></label>
-                <input class="fil" type="text" name="name" placeholder="Enter your Name" required="">
+                <input class="fil" type="text" name="Name" placeholder="Enter your Name" required="">
 
                 <label for="naem"><b>College Name</b></label>
-                <input class="fil" type="text" name="collegename" placeholder="Enter your College name " required="">
+                <input class="fil" type="text" name="Collegename" placeholder="Enter your College Name " required="">
 
                 <label for="naem"><b>Branch</b></label>
-                <input class="fil" type="text" name="Branch" placeholder="Enter your Branch name " required="">
+                <input class="fil" type="text" name="Branch" placeholder="Enter your Branch Name " required="">
 
-                <label for="naem"><b>Study year</b></label>
-                <input class="fil" type="text" name="year" placeholder="Enter your year" required="">
+                <label for="naem"><b>Study Year</b></label>
+                <input class="fil" type="text" name="year" placeholder="Enter your Year" required="">
            
                 <label for="naem"><b>Gender</b></label>
                 <input class="fil" type="text" name="gender" placeholder="Enter your Gender" required="">
