--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
                 <p style="font-size: 15px; margin: 3%;"><b>Fill The Form, Claim Your E-Certificate, And Wear Your Cyber-Badge Of Honor.</b></p>
 		    <hr>
                 <label for="naem"><b>Name</b></label>
-                <input class="fil" type="text" name="Name" placeholder="Enter your Name" required="">
+                <input class="fil" type="text" name="Name" placeholder="Enter Your Name" required="">
 
                 <label for="naem"><b>College Name</b></label>
-                <input class="fil" type="text" name="Collegename" placeholder="Enter your College Name " required="">
+                <input class="fil" type="text" name="Collegename" placeholder="Enter Your College Name " required="">
 
                 <label for="naem"><b>Branch</b></label>
-                <input class="fil" type="text" name="Branch" placeholder="Enter your Branch Name " required="">
+                <input class="fil" type="text" name="Branch" placeholder="Enter Your Branch Name " required="">
 
                 <label for="naem"><b>Study Year</b></label>
-                <input class="fil" type="text" name="year" placeholder="Enter your Year" required="">
+                <input class="fil" type="text" name="year" placeholder="Enter Your Year" required="">
            
                 <label for="naem"><b>Gender</b></label>
-                <input class="fil" type="text" name="gender" placeholder="Enter your Gender" required="">
+                <input class="fil" type="text" name="gender" placeholder="Enter Your Gender" required="">
 
                 <label for="naem"><b>Email Address</b></label>
-                <input class="fil" type="text" name="email" placeholder="Enter your Email" required="">
+                <input class="fil" type="text" name="email" placeholder="Enter Your Email" required="">
 
                 <label for="naem"><b>Phone Number</b></label>
-                <input class="fil" type="text" name="number" placeholder="Enter your Number">
+                <input class="fil" type="text" name="number" placeholder="Enter Your Number">
 
                 <label for="naem"><b>WhatsApp No.</b></label>
-                <input class="fil" type="text" name="wnumber" placeholder="Enater your WhatsApp No.">
+                <input class="fil" type="text" name="wnumber" placeholder="Enater Your WhatsApp No.">
 
                 <button class="click">Submit ➔</button>
             </form>
